--- a/views/home.html
+++ b/views/home.html
@@ -1,23 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nutrition Tracker</title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
-      crossorigin="anonymous"
-    /> -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  ${head}
+  
   <h1>Nutrition Tracker</h1>
   <nav class="navbar navbar-light bg-light">
     <form class="form-inline">
       <input class="form-control" mr-sm-3" id="search" type="search"
-      placeholder="Enter a food" aria-label="Search" />
+      placeholder="Enter a food" aria-label="Search" autocomplete = "off"/>
       <button class="btn btn-outline-success my-2 mx-3 my-sm-0" type="submit">
         Search
       </button>
@@ -32,18 +21,38 @@
     </form> -->
 
     <div class ="nutrition-facts">
+      <img class ="food-img" src ="">
 
-    <p>Calories: <span id="calories"></span></p>
-    <p>Carbs: <span id="carbs"></span></p>
-    <p>Protein: <span id="protein"></span></p>
-    <p>Fat: <span id="fat"></span></p>
-    <p>Fiber: <span id="fiber"></span></p>
+      <form >
+        <p>
+        <label for="calories"> Calories: </label>
+        <input name="calories" type ="text" id ="calories">
+      </p>
+      <p>
+        <label for="carbs"> Carbs: </label>
+        <input name="carbs" type ="text" id ="carbs">
+      </p>
+      <p>
+        <label for="protein">Protein: </label>
+        <input name="protein" type ="text" id ="protein">
+      </p>
+      <p>
+        <label for="fat">Fat: </label>
+        <input name="fat" type ="text" id ="fat">
+      </p>
+      <p>
+        <label for="fiber">Fiber: </label>
+        <input name="fiber" type ="text" id ="fiber">
+      </p>
+      <button type ="submit">Save to Database</button>
+      </form>
+    
 
 </div>
 
   
 
   <body>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
