added form to retrieve nutrition data

--- a/views/home.html
+++ b/views/home.html
@@ -23,7 +23,11 @@
     <div class ="nutrition-facts">
       <img class ="food-img" src ="">
 
-      <form >
+      <form id = "nutrition">
+        <p>
+          <label for="food"> Food: </label>
+          <input name="food" type ="text" id ="food">
+        </p>
         <p>
         <label for="calories"> Calories: </label>
         <input name="calories" type ="text" id ="calories">
