added notification on save

--- a/views/home.html
+++ b/views/home.html
@@ -52,6 +52,7 @@
       </p>
       <button type="submit">Save to Database</button>
     </form>
+    <p id ="save-notification"></p>
   </div>
 
   <body>
